{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 48,
  "lineage": "45df1649-99a9-683f-ef48-046993d4fc4b",
  "resources": [
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:internet-gateway/igw-068c79bbae8fd1310",
            "id": "igw-068c79bbae8fd1310",
            "owner_id": "376027645952",
            "tags": {
              "Name": "development-igw"
            },
            "tags_all": {
              "Name": "development-igw"
            },
            "vpc_id": "vpc-07b6ed99d36e7efa4"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-0e9d0b8e53b5305be",
            "id": "rtb-0e9d0b8e53b5305be",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068c79bbae8fd1310",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-route-public-subnets"
            },
            "tags_all": {
              "Name": "development-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b6ed99d36e7efa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cb8bb279e2675ad",
            "route_table_id": "rtb-0e9d0b8e53b5305be",
            "subnet_id": "subnet-053a287edffe2566d"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6934a8dac2cfbca",
            "route_table_id": "rtb-0e9d0b8e53b5305be",
            "subnet_id": "subnet-01e957c35e677660d"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.main",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-053a287edffe2566d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053a287edffe2566d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-1"
            },
            "tags_all": {
              "Name": "development-public-1"
            },
            "vpc_id": "vpc-07b6ed99d36e7efa4"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-01e957c35e677660d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e957c35e677660d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-public-2"
            },
            "tags_all": {
              "Name": "development-public-2"
            },
            "vpc_id": "vpc-07b6ed99d36e7efa4"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:vpc/vpc-07b6ed99d36e7efa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-079badb4ddbc3ca28",
            "default_route_table_id": "rtb-017734a2756384bbf",
            "default_security_group_id": "sg-091a0d14aa9e901c7",
            "dhcp_options_id": "dopt-06728da8acc64dd99",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b6ed99d36e7efa4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017734a2756384bbf",
            "owner_id": "376027645952",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e65a724d99c9701",
            "domain": "vpc",
            "id": "eipalloc-03e65a724d99c9701",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-15-157-110-209.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.110.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-1"
            },
            "tags_all": {
              "Name": "production-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469edef5fe4b14ed",
            "domain": "vpc",
            "id": "eipalloc-0469edef5fe4b14ed",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-15-157-133-150.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.133.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-2"
            },
            "tags_all": {
              "Name": "production-nat-gw-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff8b49f8401c1331",
            "domain": "vpc",
            "id": "eipalloc-0ff8b49f8401c1331",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-96-3-18.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.3.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat-gw-3"
            },
            "tags_all": {
              "Name": "production-nat-gw-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:internet-gateway/igw-0f4c36d97297d3eb1",
            "id": "igw-0f4c36d97297d3eb1",
            "owner_id": "376027645952",
            "tags": {
              "Name": "production-igw"
            },
            "tags_all": {
              "Name": "production-igw"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e65a724d99c9701",
            "association_id": "eipassoc-0ee44d571fc7bc378",
            "connectivity_type": "public",
            "id": "nat-0737424134a03192b",
            "network_interface_id": "eni-074fbb3f4d58e28ca",
            "private_ip": "10.200.1.111",
            "public_ip": "15.157.110.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7de28ad149ec35d",
            "tags": {
              "Name": "production-nat-gw-1"
            },
            "tags_all": {
              "Name": "production-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469edef5fe4b14ed",
            "association_id": "eipassoc-0038998d3c17ff5d1",
            "connectivity_type": "public",
            "id": "nat-0df28a9efb773dcd9",
            "network_interface_id": "eni-0957f4f5964e44fca",
            "private_ip": "10.200.2.223",
            "public_ip": "15.157.133.150",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6fa08a357e01416",
            "tags": {
              "Name": "production-nat-gw-2"
            },
            "tags_all": {
              "Name": "production-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff8b49f8401c1331",
            "association_id": "eipassoc-04c5669ef4048b94c",
            "connectivity_type": "public",
            "id": "nat-0e4f1290d6a342311",
            "network_interface_id": "eni-03682acb1dcfba31f",
            "private_ip": "10.200.3.138",
            "public_ip": "3.96.3.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e02ed2fb2442bb5f",
            "tags": {
              "Name": "production-nat-gw-3"
            },
            "tags_all": {
              "Name": "production-nat-gw-3"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-0be0afc2222b3ea28",
            "id": "rtb-0be0afc2222b3ea28",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0737424134a03192b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-0bd0a608530385d2a",
            "id": "rtb-0bd0a608530385d2a",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0df28a9efb773dcd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-2"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-05aac9c1522f47304",
            "id": "rtb-05aac9c1522f47304",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e4f1290d6a342311",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-private-subnet-3"
            },
            "tags_all": {
              "Name": "production-route-private-subnet-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-076a72d8bcbe2eb05",
            "id": "rtb-076a72d8bcbe2eb05",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4c36d97297d3eb1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-route-public-subnets"
            },
            "tags_all": {
              "Name": "production-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063698118a778e33f",
            "route_table_id": "rtb-0be0afc2222b3ea28",
            "subnet_id": "subnet-003d26e8817276264"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d74665dc6d73f5",
            "route_table_id": "rtb-0bd0a608530385d2a",
            "subnet_id": "subnet-08f2387726c66b5a3"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023616ca2162bbc7f",
            "route_table_id": "rtb-05aac9c1522f47304",
            "subnet_id": "subnet-0ccdd919c41f909aa"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0741a7a812c0edf3d",
            "route_table_id": "rtb-076a72d8bcbe2eb05",
            "subnet_id": "subnet-0b7de28ad149ec35d"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a4acc0a59153efe",
            "route_table_id": "rtb-076a72d8bcbe2eb05",
            "subnet_id": "subnet-0c6fa08a357e01416"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071b396c19dba2002",
            "route_table_id": "rtb-076a72d8bcbe2eb05",
            "subnet_id": "subnet-0e02ed2fb2442bb5f"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-003d26e8817276264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.200.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003d26e8817276264",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-1"
            },
            "tags_all": {
              "Name": "production-private-1"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-08f2387726c66b5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.200.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f2387726c66b5a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-2"
            },
            "tags_all": {
              "Name": "production-private-2"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0ccdd919c41f909aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.200.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccdd919c41f909aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-3"
            },
            "tags_all": {
              "Name": "production-private-3"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0b7de28ad149ec35d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7de28ad149ec35d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-1"
            },
            "tags_all": {
              "Name": "production-public-1"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0c6fa08a357e01416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6fa08a357e01416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-2"
            },
            "tags_all": {
              "Name": "production-public-2"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0e02ed2fb2442bb5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.200.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e02ed2fb2442bb5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-3"
            },
            "tags_all": {
              "Name": "production-public-3"
            },
            "vpc_id": "vpc-0c3a49bfb99108c7e"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:vpc/vpc-0c3a49bfb99108c7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0867e8964cc5ad286",
            "default_route_table_id": "rtb-0e8c2bfe9d59778d6",
            "default_security_group_id": "sg-04e470b5ca89a6635",
            "dhcp_options_id": "dopt-06728da8acc64dd99",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3a49bfb99108c7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8c2bfe9d59778d6",
            "owner_id": "376027645952",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075c371b52b764ce3",
            "domain": "vpc",
            "id": "eipalloc-075c371b52b764ce3",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-98-201-58.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.201.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TEST-nat-gw-1"
            },
            "tags_all": {
              "Name": "TEST-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e095a219cb58f52",
            "domain": "vpc",
            "id": "eipalloc-06e095a219cb58f52",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-15-157-5-211.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.5.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TEST-nat-gw-2"
            },
            "tags_all": {
              "Name": "TEST-nat-gw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:internet-gateway/igw-08ee317856596ad3d",
            "id": "igw-08ee317856596ad3d",
            "owner_id": "376027645952",
            "tags": {
              "Name": "TEST-igw"
            },
            "tags_all": {
              "Name": "TEST-igw"
            },
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075c371b52b764ce3",
            "association_id": "eipassoc-06d50905eecf08b50",
            "connectivity_type": "public",
            "id": "nat-03378f2fa2ed76748",
            "network_interface_id": "eni-0ff8544f6a8c51430",
            "private_ip": "10.200.1.186",
            "public_ip": "3.98.201.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088b80b5d46867c4e",
            "tags": {
              "Name": "TEST-nat-gw-1"
            },
            "tags_all": {
              "Name": "TEST-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e095a219cb58f52",
            "association_id": "eipassoc-03ab5938605e98319",
            "connectivity_type": "public",
            "id": "nat-07f5ba5431f30cf06",
            "network_interface_id": "eni-0a61ed6309493cee5",
            "private_ip": "10.200.2.74",
            "public_ip": "15.157.5.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c8a32ff4579031b",
            "tags": {
              "Name": "TEST-nat-gw-2"
            },
            "tags_all": {
              "Name": "TEST-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-089019113b49df6a9",
            "id": "rtb-089019113b49df6a9",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03378f2fa2ed76748",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "TEST-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-0c0cecfd5d08920e8",
            "id": "rtb-0c0cecfd5d08920e8",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07f5ba5431f30cf06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-route-private-subnet-2"
            },
            "tags_all": {
              "Name": "TEST-route-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:route-table/rtb-015a2baadc544460b",
            "id": "rtb-015a2baadc544460b",
            "owner_id": "376027645952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ee317856596ad3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-route-public-subnets"
            },
            "tags_all": {
              "Name": "TEST-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5f5dc42b5cf0889",
            "route_table_id": "rtb-089019113b49df6a9",
            "subnet_id": "subnet-01b8879205ef5d4a5"
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_route_table.private_subnets",
            "module.vpc-test.aws_subnet.private_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ec6db783aaf6cb",
            "route_table_id": "rtb-0c0cecfd5d08920e8",
            "subnet_id": "subnet-0ea2a2fc140af9b44"
          },
          "dependencies": [
            "module.vpc-test.aws_eip.nat",
            "module.vpc-test.aws_nat_gateway.nat",
            "module.vpc-test.aws_route_table.private_subnets",
            "module.vpc-test.aws_subnet.private_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b49519cf8996813e",
            "route_table_id": "rtb-015a2baadc544460b",
            "subnet_id": "subnet-088b80b5d46867c4e"
          },
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_route_table.public_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097724e23076d96ad",
            "route_table_id": "rtb-015a2baadc544460b",
            "subnet_id": "subnet-00c8a32ff4579031b"
          },
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.main",
            "module.vpc-test.aws_route_table.public_subnets",
            "module.vpc-test.aws_subnet.public_subnets",
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-01b8879205ef5d4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.200.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b8879205ef5d4a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-private-1"
            },
            "tags_all": {
              "Name": "TEST-private-1"
            },
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0ea2a2fc140af9b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.200.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea2a2fc140af9b44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-private-2"
            },
            "tags_all": {
              "Name": "TEST-private-2"
            },
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-088b80b5d46867c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b80b5d46867c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-public-1"
            },
            "tags_all": {
              "Name": "TEST-public-1"
            },
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-00c8a32ff4579031b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c8a32ff4579031b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-public-2"
            },
            "tags_all": {
              "Name": "TEST-public-2"
            },
            "vpc_id": "vpc-097990abdc162bdce"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.main",
            "module.vpc-test.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:vpc/vpc-097990abdc162bdce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-01b5246409de7815b",
            "default_route_table_id": "rtb-067fb5cbacbafa67d",
            "default_security_group_id": "sg-0436d7541dacf9c23",
            "dhcp_options_id": "dopt-06728da8acc64dd99",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097990abdc162bdce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067fb5cbacbafa67d",
            "owner_id": "376027645952",
            "tags": {
              "Name": "TEST-vpc"
            },
            "tags_all": {
              "Name": "TEST-vpc"
            }
          }
        }
      ]
    }
  ]
}